almost done w/ slots

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,26 @@
   <title>Document</title>
 </head>
 <body>
-  <austin-pickett name="austin pickeettt">
-    <h1 slot="name">Austin Pickett</h1>
-    <span slot="rating">2/5, 4/5 w. rice</span>
-    <button><span slot="count">0</span></button>
-  </austin-pickett>
+
+  <hello-world>
+    <div>
+      <h1 slot="name">Austin Pickettttt</h1>
+      <div slot="rating">2/5, 4/5 w/ rice</div>
+      <div slot="test"></div>
+      <button slot="count">0</button>
+    </div>
+  </hello-world>
+
+  <hello-world></hello-world>
+
+  <hello-world>
+    <div>
+      <h1 slot="name">Austin Pickettttt</h1>
+      <div slot="rating">2/5, 4/5 w/ rice</div>
+      <div slot="test"></div>
+      <button slot="count">0</button>
+    </div>
+  </hello-world>
 
   <p>
     this p tag is unaffacted.
