--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,45 @@
       {toggled && <div>toggled</div>}
     </>
   -->
-  <div>
-    <button data-key="0.0">
-      toggle <span data-key="0.1">0</span>
-    </button>
-  </div>
+    <div id="gc">
+      <button data-key="0.0">
+        toggle <span data-key="0.1">0</span>
+      </button>
+
+      <hr />
+
+      <button data-key="0.2">hi.</button>
+    </div>
+
+    <div>
+      <button data-key="0.0">
+        toggle <span data-key="0.1">0</span>
+      </button>
+
+      <hr />
+
+      <button data-key="0.2">hi.</button>
+    </div>
+
+    <div>
+      <button data-key="0.0">
+        toggle <span data-key="0.1">0</span>
+      </button>
+
+      <hr />
+
+      <button data-key="0.2">hi.</button>
+    </div>
+
+    <div>
+      <button data-key="0.0">
+        toggle <span data-key="0.1">0</span>
+      </button>
+
+      <hr />
+
+      <button data-key="0.2">hi.</button>
+    </div>
 
   <script src="./index.js"></script>
 </body>
