--- a/src/index.html
+++ b/src/index.html
@@ -8,26 +8,30 @@
 </head>
 <body>
 
+  <button>
+    append
+  </button>
+
   <!--
     <>
       <button onClick={() => setToggle()}>Toggle {count}</button>
       {toggled && <div>toggled</div>}
     </>
   -->
-    <div id="gc">
-      <h2>kk well lets do one more <a href='javascript:;' data-key="0.3">Remove me</a></h2>
+  <div class="gc">
+    <h2>kk well lets do one more <a href='javascript:;' data-key="0.3">Remove me</a></h2>
 
-      <h3 data-key="0.4" contenteditable>hello</h3>
-      <p data-key="0.4">hello</p>
+    <h3 data-key="0.4" contenteditable>hello</h3>
+    <p data-key="0.4">hello</p>
 
-      <span data-key="0.1">0</span>
-      <button data-key="0.2">+</button>
-      <br />
+    <span data-key="0.1">0</span>
+    <button data-key="0.2">+</button>
+    <br />
 
-      <button data-key="0.0">
-        toggle
-      </button>
-    </div>
+    <button data-key="0.0">
+      toggle
+    </button>
+  </div>
 
   <script src="./index.js"></script>
 </body>
