--- a/src/index.html
+++ b/src/index.html
@@ -129,6 +129,6 @@ new MutationObserver(muts => {
     <div>&nbsp;</div>
   </footer>
 
-  <script src="./index.js"></script>
+  <script src="./index.ts"></script>
 </body>
 </html>
